--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,8 @@
     "react/prefer-stateless-function": 0,
     "react/jsx-filename-extension": 0,
     "react/jsx-one-expression-per-line": 0,
-    "no-nested-ternary": 0
+    "react/jsx-props-no-spreading": "off",
+    "no-nested-ternary": 0,
+    "react/prop-types": 0
   }
 }
