--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
   "repository": "https://github.com/kry-p/convert-it_front.git",
   "author": "kry-p <jhjung.dev@gmail.com>",
   "license": "MIT",
+  "proxy": "http://sigae.asuscomm.com:9210/",
   "dependencies": {
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mui/icons-material": "^5.0.1",
+    "@mui/material": "^5.0.1",
+    "@mui/styles": "^5.0.1",
     "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,7 +37,7 @@
     "prettier": "^2.3.2"
   },
   "scripts": {
-    "dev": "next",
+    "dev": "next dev -p 9210",
     "build": "next build",
     "start": "next start"
   }
