--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "scripts": {
     "dev": "next dev -p 8000",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start"
   }
 }
