--- a/nginx.conf
+++ b/nginx.conf
@@ -5,4 +5,14 @@ server {
         index   index.html;
         try_files $uri $uri/ /index.html;
     }
+
+    location /api/ {
+        proxy_set_header    X-Real-IP    $remote_addr;
+        proxy_set_header    X-Forwarded-Host      $http_host;
+        proxy_set_header    X-Forwarded-Server    $http_host;
+        proxy_set_header    X-Forwarded-Server    $host;
+        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto  $scheme;
+        proxy_pass http://192.168.15.129:8500;
+    }
 }
