--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@mui/base": "^5.0.0-alpha.69",
     "@mui/icons-material": "^5.0.1",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
+    "@mui/system": "^5.4.2",
+    "@svgr/webpack": "^6.2.1",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
     "styled-components": "^5.3.1"
   },
   "devDependencies": {
